fix: get rid of the jumping page for good

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,9 +25,13 @@
   @apply md:mr-auto;
 }
 
+.garuda-shell-menubar {
+  @apply m-2;
+}
+
 /*`Custom classes`*/
 body {
-  @apply p-2 selection:bg-primary selection:text-surface-0;
+  @apply selection:bg-primary selection:text-surface-0;
   font-optical-sizing: auto;
 }
 
